# penum-private-rpc

./: .gitignore  BUILD.md  CONTRIBUTORS.md  Cargo.toml  FIX_WINDOWS_DEFENDER.md  GRANT-PROPOSAL.md  QUICKSTART.md  README.md  ROADMAP.md  TECHNICAL-SPEC.md  build.ps1  client_config.json  run.ps1  test.ps1  test_balance.ps1  test_rpc.ps1
docs/: architecture.md  metamask-setup.md  scaling-deployment.md  verification.md
penum-rpc-client/: Cargo.toml  config.example.json
penum-rpc-client/src/: config.rs  main.rs  packet.rs  penum_client.rs  rpc_server.rs  ui.rs
penum-rpc-gateway/: Cargo.toml  config.example.json
penum-rpc-gateway/src/: config.rs  crypto.rs  gateway.rs  main.rs  relay.rs  rpc_forwarder.rs
