[workspace]
members = [
    "penum-rpc-client",
    "penum-rpc-gateway",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
anyhow = "1.0"
byteorder = "1.4"
hkdf = "0.12"
sha2 = "0.10"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
