[package]
name = "penum-rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
byteorder = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
warp = { workspace = true }
